<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.barahona.relojinternacional.MainActivity">

    <!-- Texto Hora principal -->
    <TextView
        android:id="@+id/text_hora_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hour_example"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:textSize="54sp"/>
    <TextView
        android:id="@+id/text_ciudad_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_city_example"
        android:layout_below="@id/text_hora_principal"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"/>

    <!-- Linea Vertical -->
    <View
        android:id="@+id/view_linea_vertical"
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:background="#000"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/text_ciudad_principal"
        android:layout_centerHorizontal="true"/>

    <!-- Horas de ciudad -->
    <LinearLayout
        android:id="@+id/linear_city1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignRight="@id/view_linea_vertical"
        android:layout_below="@id/text_ciudad_principal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_city_los_angeles"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_city_bogota"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_city_madrid"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_city2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/view_linea_vertical"
        android:layout_alignLeft="@id/view_linea_vertical"
        android:layout_below="@id/text_ciudad_principal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_hour_los_angeles"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_hour_bogota"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/text_hour_madrid"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <!-- Texto Power View -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/power_by_marlene"/>


</RelativeLayout>
